--- a/website/newsletter/236/index.mdx
+++ b/website/newsletter/236/index.mdx
@@ -9,7 +9,7 @@ Hi everyone!
 
 Cyril and Matthieu from [Theodo Apps](https://apps.theodo.com/en?utm_source=thisweekinreact) here 👋.
 
-This week, there are big news from the Remix team. Microsoft also made it easier to try out the TypeScript Go rewrite.
+This week, the Remix team announced some big news. Microsoft has also made it easier to try out TypeScript Go rewriting.
 
 In the React Native world, there were a few minor but interesting releases, and the App.js config starts tomorrow. Seb will have more to tell you about it next week.
 
