--- a/website/newsletter/237/index.mdx
+++ b/website/newsletter/237/index.mdx
@@ -1,12 +1,18 @@
 ---
 slug: /237
-title: "This Week In React #237: ..."
+title: "This Week In React #237: RSC, TanStack, Storybook, Lingo Compiler, LiveStore, Base UI | Legacy Arch, Hermes N-API, 120fps, ReactRaptor, DevTools | TC39, Import Maps, Vite, Vitest, Babel, PHP"
 authors: [slorber]
 date: 06-04-2025
 unlisted: true
 ---
 
 Hi everyone!
+
+I thought I was on schedule for today's issue, until I realized that Dan Abramov wrote 4 RSC blog posts this week 😂. We also get great releases, including Storybook, LiveStore, Base UI, and the Lingo Compiler is a quite exciting innovation. The community is still processing last week's [Remix awakening](https://remix.run/blog/wake-up-remix) with many videos and podcasts commenting on the news.
+
+React Native devs were at App.js last week, where the React Native team unveiled their plan to freeze the Legacy Architecture.
+
+The last TC39 meeting was also quite productive, with 3 proposals progressing to stage 4 among other things. We also got various interesting announcements from the Vite ecosystem.
 
 <!-- truncate -->
 
@@ -53,6 +59,8 @@ This release also includes:
 - Tag-based organization: Filter and group stories by tag
 - Story globals: Set context (theme, viewport, locale) at the story level
 - Frameworks: Major updates for Svelte, Next.js, React Native, and more\!
+
+---
 
 - 💸 [Product for Engineers - What nobody tells developers about documentation](https://go.posthog.com/twir-jun4)
 - 📖 [TanStack docs \- Migrate from Next.js](https://tanstack.com/start/latest/docs/framework/react/migrate-from-next-js)
@@ -101,22 +109,45 @@ With 250+ cloud data integrations, a **React and React Native SDK**, **plus a cl
 
 ## 📱 React-Native {#react-native}
 
-<Todo />
+[![Freezing the Legacy Architecture](/emails/issues/237/rn-frozen.jpg)](https://github.com/reactwg/react-native-new-architecture/discussions/290)
+
+**[Freezing the Legacy Architecture](https://github.com/reactwg/react-native-new-architecture/discussions/290)**
+
+The React Native team officially announced their plan to freeze the ~~Old Arch~~ Legacy Arch, so that they can focus all their efforts on the New Architecture. They’ll keep the Legacy Arch usable through security and critical bug fixes, but don't plan to merge new features. They'll eventually remove it an indefinite future, because keeping it around has a maintenance cost.
+
+---
 
 - 💸 [Join React Universe Meetup, New York for Brownfield tricks w/ RNEF, OpenTelemetry for RN and more. Tue, June 24 | 6–9PM EDT (hybrid).](https://www.callstack.com/events/react-universe-meetup-new-york-june-2025?utm_campaign=Brownfield&utm_source=TWIR&utm_medium=mail&utm_content=react_universe_mmetup_new_york)
+- 👀 [Hermes PR \- Add Node-API to Hermes](https://github.com/facebook/hermes/pull/1377): Recent conversations show the Hermes team excited to accept this Microsoft PR, and plans to leverage the integration for standard library APIs such as `Intl`, `Temporal`.
+- 👀 [React Native PR \- support 120fps for Animated on iOS](https://github.com/facebook/react-native/pull/51775)
+- 📜 [ReactRaptor: Find out which Android apps are built with Expo](https://expo.dev/blog/which-android-apps-are-built-with-expo): This cool app scans your phone and shows you a list of RN/Expo apps. I just tried and discovered many apps I didn’t suspect were using RN, including local French ones. This might be super helpful to find a new RN job or freelancing customer.
+- 💸 [Expo AI Chatbot \- Fastest way to create React Native AI Chatbot apps. Complete codebase with streaming, voice agent, image generation and more](https://www.expoaichatbot.com?atp=twir)
+- 📦 [Reanimated 3.18 \- Support RN 0.80](https://github.com/software-mansion/react-native-reanimated/releases/tag/3.18.0)
+- 📦 [React Native Better DevTools \- macOS app for debugging React Query, MMKV, AsyncStorage, Secure Storage, env variables across all platforms](https://github.com/LovesWorking/rn-better-dev-tools)
+- 📦 [zustand-expo-devtools](https://github.com/csark0812/zustand-expo-devtools)
+- 🎥 [App.js Conf 2025 – Live stream from day 1 and day 2](https://www.youtube.com/watch?v=K2JTTKpptGs&list=PLSk21zn8fFZBD3Kxg8Rw_n4LPIuA6TGHd)
+- 🎥 [React Universe Meetup, April 2025](https://www.youtube.com/watch?v=FqSLVdOrclI&list=PLZ3MwD-soTTHQjW7z1BEUmHC7aKdUnA7J)
+- 🎥 [Simon Grimm \- React Native Tabs Navigation with Expo Router](https://www.youtube.com/watch?v=CN4x8srCMl0)
+- 🎙️ [Rocket Ship 71 \- Reanimated 4 Beta, LiveStore, DevTools & Expo Router Course](https://share.transistor.fm/s/512c4c06)
 
 ---
 
 ## 🔀 Other {#other}
 
-<Todo />
+- 📣 [TC39 Advances 9 proposals including `Array.fromAsync`, `Error.isError`, and Explicit Resource Management to Stage 4](https://socket.dev/blog/tc39-advances-9-proposals): Great to see the `using` keyword landing in the spec, and already leveraged by Vitest, and the new [Random namespace and functions](https://github.com/tc39/proposal-random-functions) is also quite exciting\!
+- 📜 [Resilient Import Maps](https://shopify.engineering/resilient-import-maps): Shopify made a significant contribution to the HTML spec so that browsers can declare multiple import maps. I believe it’s not a coincidence and Remix v3 is likely to leverage that.
+- 📜 [Seamlessly Blend PHP with Node.js](https://blog.platformatic.dev/seamlessly-blend-php-with-nodejs)
+- 📦 [Rolldown-Vite](https://voidzero.dev/posts/announcing-rolldown-vite): The Rolldown-powered version of Vite just reached feature parity with its parent project. Now available in technical preview, it can be used as a drop-in replacement. Early adopters reported up to 16x faster builds.
+- 📦 [Vitest 3.2 \- Annotations API, Custom Browser Locators, `using`, Test Signal, better Coverage Result](https://vitest.dev/blog/vitest-3-2.html)
+- 📦 [Vite 7.0 Beta \- Drops Node 18, ESM-only, browser targets `baseline-widely-available`](https://github.com/vitejs/vite/blob/main/packages/vite/CHANGELOG.md#700-beta0-2025-06-02)
+- 📦 [Babel 8 Beta \- Drops Node 18, ESM-only, cleanup technical dept](https://babeljs.io/blog/2025/05/30/babel-8-beta)
 
 ---
 
 ## 🤭 Fun {#fun}
 
-<Todo />
+[![alt](/emails/issues/237/meme.jpg)](https://x.com/AlemTuzlak/status/1927806693007597883)
 
-[![alt](/emails/issues/215/meme.jpg)](https://twitter.com/TODOTODOTODOTODOTODOTODOTODOTODOTODOTODO)
+[![alt](/emails/issues/237/meme2.jpg)](https://x.com/sebastienlorber/status/1929880640670814510)
 
 See ya! 👋
