--- a/website/newsletter/237/index.mdx
+++ b/website/newsletter/237/index.mdx
@@ -93,17 +93,15 @@ This release also includes:
 
 ## 💸 Sponsor {#sponsor2}
 
-[![Add loyalty logic to your product — with just one API.](/emails/issues/237/dynamo.jpg)](https://whitelabel-loyalty.com/products/dynamo/?utm_source=email&utm_medium=newsletter&utm_campaign=react)
+[![Build a working reward flow in minutes — with Dynamo](/emails/issues/237/dynamo.png)](hhttps://whitelabel-loyalty.com/products/dynamo/?utm_source=email&utm_medium=newsletter&utm_campaign=react)
 
-**[Add loyalty logic to your product — with just one API.](https://whitelabel-loyalty.com/products/dynamo/?utm_source=email&utm_medium=newsletter&utm_campaign=react)**
+**[Build a working reward flow in minutes — with Dynamo](https://whitelabel-loyalty.com/products/dynamo/?utm_source=email&utm_medium=newsletter&utm_campaign=react)**
 
-**Why rebuild loyalty from scratch when you can plug it in with Dynamo?**
+Building loyalty logic from scratch is a pain — infra setup, reward tracking, event triggers, tier rules… it all adds up.
 
-Dynamo is the API-first headless loyalty engine used by product teams at leading fintech and consumer apps to embed rewards, tiers, and behavior-based engagement — without writing it all from zero.
+**Dynamo** is the loyalty engine built for developers: one API, full control, zero gatekeeping. Get hands-on with real SDKs (React + React Native), clear docs, and a live sandbox to test your own reward flows in minutes — no calls, no credit cards, just code.
 
-With 250+ cloud data integrations, a **React and React Native SDK**, **plus a clean sandbox trial**, you can improve your retention now in days not months.
-
-→ [Launch demo and get free sandbox access now.](https://whitelabel-loyalty.com/products/dynamo/?utm_source=email&utm_medium=newsletter&utm_campaign=react)
+→ [Get sandbox access now.](https://whitelabel-loyalty.com/products/dynamo/?utm_source=email&utm_medium=newsletter&utm_campaign=react)
 
 ---
 
