--- a/website/newsletter/238/index.mdx
+++ b/website/newsletter/238/index.mdx
@@ -7,7 +7,7 @@ date: 06-11-2025
 
 Hi everyone!
 
-This week is relatively calm in the React ecosystem, but we still have various interesting blog posts and releases.
+This week is relatively calm in the React ecosystem, but we still have various interesting blog posts and releases. Maybe we'll soon get some exciting news from [React Summit](https://reactsummit.com/) that's about on Friday!
 
 On the React Native side, all the devs are already working on iOS 26 Liquid Glass support and other things announced by Apple yesterday. This new design thing is rather controversial and subject to a lot of mockery 😂. React Native 0.80 is just around the corner, I'll keep all this for later, but you can get a sneak peek in [Alex Hunt talk at App.js](https://www.youtube.com/live/UTaJlqhTk2g?t=6520s).
 
